--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
-"scripts": {
-  "dev": "next dev",
-  "build": "npm run build-data && next build",
-  "start": "next start",
-  "build-data": "tsx scripts/build-data.ts"
-},
+{
+  "name": "country-factbook-reference-2026",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "npm run build-data && next build",
+    "start": "next start",
+    "build-data": "tsx scripts/build-data.ts"
+  },
+  "dependencies": {
+    "next": "^15.5.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.9.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
+  }
+}
