--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm run build-data && next build",
-    "start": "next start",
-    "build-data": "tsx scripts/build-data.ts"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "next": "^15.5.0",
@@ -20,7 +19,6 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
